Fixing error in package.json remove illegal export

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
       "import": "./lib/index.mjs",
       "require": "./lib/index.js"
     },
-    "./package.json": "./package.json",
-    "./": "./"
+    "./package.json": "./package.json"
   },
   "scripts": {
     "clean": "rm -rf lib/ dist/",
